@@ -13,6 +13,7 @@ Version 5.4.0
 - Fixed an optimizer bug in loop strength reduction
 - Handle mixed float/int in C ?: operator by promoting one side as necessary
 - Made some low level C functions builtins
+- Made FCACHE size settable on P2
 - Support debug_baud macro to some degree
 - Set default baud rate for C and BASIC based on -D_BAUD=n macro
 - Tweaked listing file output slightly to include comments at end of file
